# socialgraph

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.yml.example  pyproject.toml
docs/superpowers/plans/: 2026-05-23-m1-ingest-scaffold.md  2026-05-23-m2-identity-graph.md  (+3 more)
src/socialgraph/: __init__.py  __main__.py  config.py  exit_codes.py  lockfile.py  paths.py  pipeline.py  runs.py  sync_log.py
tests/: conftest.py
tests/e2e/: test_m1_smoke.py  test_m2_smoke.py  test_m3_smoke.py  test_m5_smoke.py
tests/integration/: test_cross_platform_pipeline.py  test_import_pipeline.py  test_init_command.py  test_link_command.py  test_login_command.py  test_merge_review_command.py  test_neighbors_command.py  test_pipeline_e2e.py  test_port_discover_command.py  test_port_next_command.py  test_port_queue_command.py  test_port_review_command.py  test_rebuild_command.py  test_status_command.py  test_unmerge_command.py  test_who_at_command.py
tests/unit/: test_canonical.py  test_config.py  test_cross_platform.py  test_discovery.py  test_enrichment.py  test_exit_codes.py  test_fuzzy.py  test_header_aliases.py  test_import_linkedin.py  test_import_x.py  test_linkedin_scraper.py  test_lockfile.py  test_merge_fields.py  test_paths.py  test_pending.py  test_port_scoring.py  test_port_state.py  test_projection.py  test_query.py  test_resolve.py  test_runs.py  test_schema.py  test_snapshot_build.py  test_snapshot_diff.py  test_snapshot_models.py  test_snapshot_store.py  test_sync_log.py  test_web_search.py  test_x_search_fake.py
(+43 files in other folders)
