[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialgraph"
version = "0.1.0"
description = "Personal network sovereignty tool. Own your social graph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "chardet>=5.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1.360",
    "pre-commit>=3.7",
]

[project.scripts]
socialgraph = "socialgraph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/socialgraph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
